--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Abhi Bhai Movie Portal</title>
   <style>
     body {
@@ -9,14 +10,14 @@
       color: white;
       font-family: Arial, sans-serif;
       margin: 0;
-      padding: 20px;
+      padding: 15px;
       text-align: center;
     }
 
     .movie-container {
       display: flex;
       flex-wrap: wrap;
-      gap: 20px;
+      gap: 15px;
       justify-content: center;
       margin-top: 30px;
     }
@@ -24,6 +25,7 @@
     .movie {
       width: 200px;
       transition: transform 0.3s;
+      flex-shrink: 0;
     }
 
     .movie:hover {
@@ -33,24 +35,54 @@
     .movie img {
       width: 100%;
       border-radius: 8px;
+      height: auto;
+      display: block;
     }
 
     .movie-title {
-      margin-top: 5px;
+      margin-top: 8px;
       font-size: 14px;
       color: white;
+      white-space: normal;        /* allow wrapping */
+      word-wrap: break-word;      /* break long words */
+      line-height: 1.3em;
+      text-align: center;
+      min-height: 3.5em;          /* reserve space for 2 lines */
+      padding: 0 5px;
     }
 
     #searchBox {
       margin: 20px 0;
+      max-width: 300px;
+      margin-left: auto;
+      margin-right: auto;
+      display: flex;
+      gap: 10px;
+      justify-content: center;
     }
 
     #searchInput {
       padding: 10px;
       font-size: 16px;
-      width: 250px;
+      width: 70%;
       border-radius: 5px;
       border: none;
+      outline: none;
+    }
+
+    #searchBox button {
+      padding: 10px 15px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: none;
+      background-color: orange;
+      color: black;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    #searchBox button:hover {
+      background-color: darkorange;
     }
 
     #movieHeader {
@@ -61,111 +93,120 @@
     a {
       text-decoration: none;
     }
+
+    /* Responsive styles for tablets and phones */
+    @media (max-width: 700px) {
+      .movie {
+        width: 45%; /* 2 movies per row */
+      }
+      .movie-title {
+        font-size: 13px;
+        min-height: 4em; /* 3 lines approx */
+      }
+      #searchBox {
+        max-width: 90vw;
+      }
+      #searchInput {
+        font-size: 14px;
+        width: 65%;
+      }
+      #searchBox button {
+        font-size: 14px;
+        padding: 10px;
+      }
+    }
+
+    @media (max-width: 450px) {
+      .movie {
+        width: 100%; /* 1 movie per row */
+      }
+      .movie-title {
+        font-size: 14px;
+        min-height: 4.5em;
+      }
+      #searchBox {
+        flex-direction: column;
+        gap: 10px;
+      }
+      #searchInput {
+        width: 100%;
+      }
+      #searchBox button {
+        width: 100%;
+      }
+    }
   </style>
 </head>
 <body>
 
-<!-- Search Box -->
-<div id="searchBox">
-  <input type="text" id="searchInput" placeholder="Search movies...">
-  <button onclick="searchMovies()">Search</button>
-</div>
+  <!-- Search Box -->
+  <div id="searchBox">
+    <input type="text" id="searchInput" placeholder="Search movies..." />
+    <button onclick="searchMovies()">Search</button>
+  </div>
 
-<!-- Movie Section -->
-<h2 id="movieHeader">🔥 Latest Releases</h2>
-<div class="movie-container" id="movieContainer"></div>
+  <!-- Movie Section -->
+  <h2 id="movieHeader">🔥 Latest Releases</h2>
+  <div class="movie-container" id="movieContainer"></div>
 
-<script>
-  // 🧠 Customize your movies here (image and link per movie)
-  const movies = [
-    {
-      title: "JANA NAYAGAN (2025)| Vijay Thalapathy New South Hindi Dubbed Full Action Movie | Full Movie in Hindi",
-      img: "https://i.ytimg.com/vi/ryutkf-KfH8/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLCammEChq9I9x2fLEGtYITNM8E9qQ",
-      link: "https://youtu.be/iUlhzymqnzc?si=rlpui42kj6lgPzFz"
-    },
-    {
-      title: "Vijay Sensational Hindi Dubbed Action Movie HD | 2022 Latest South Indian Hindi Dubbed Movies",
-      img: "https://i.ytimg.com/vi/bRdVLezplVs/maxresdefault.jpg",
-      link: "https://youtu.be/bRdVLezplVs?si=leKdvFz6mBdCZuWp"
-    },
-    {
-      title: "Dumdaar Khiladi Movie in Hindi | Ram Pothineni | Anupama | Hindi Movie 2024 Full Movie | South Movie",
-      img: "https://i.ytimg.com/vi/UAOMIrYmDFQ/maxresdefault.jpg",
-      link: "https://youtu.be/UAOMIrYmDFQ?si=QB0FeBKYfuhpKQLg"
-    },
-    {
-      title: "Ramcharan's Jaat New 2025 Released Full Action Movie | Latest New South Hindi Dubbed Movie 2025",
-      img: "https://i.ytimg.com/vi/OaWkGdTvHIU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDOPVJk9S5z62ZE_X4mhNsBfHhoag",
-      link: "https://youtu.be/nqmYnTZvcw8?si=wcYDUYH7VweZMZDMd"
-    },
-    {
-      title: "Yevadu (Full HD) - Ram Charan & Allu Arjun Blockbuster Dubbed Movie | Kajal Aggarwal, Shruti",
-      img: "https://i.ytimg.com/vi/AgwszFUm_yQ/maxresdefault.jpg",
-      link: "https://youtu.be/xZw2trc5T20?si=4jCKQxiaxsGx1ALg"
-    },
-    {
-      title: "रोमियो - बिग बजट हिंदी डब फिल्म | साउथ एक्शन मूवी | राम चरण की ब्लॉकबस्टर साउथ हिंदी डब्ड मूवी",
-      img: "https://i.ytimg.com/vi/lHJrIxL0C0c/maxresdefault.jpg",
-      link: "https://youtu.be/lHJrIxL0C0c?si=ycq1nYg4_RrgzEsn"
-    },
-     {
-      title: "JANA NAYAGAN (2025)| Vijay Thalapathy New South Hindi Dubbed Full Action Movie | Full Movie in Hindi",
-      img: "https://i.ytimg.com/vi/ryutkf-KfH8/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLCammEChq9I9x2fLEGtYITNM8E9qQ",
-      link: "https://youtu.be/iUlhzymqnzc?si=rlpui42kj6lgPzFz"
-    },
-    {
-      title: "Vijay Sensational Hindi Dubbed Action Movie HD | 2022 Latest South Indian Hindi Dubbed Movies",
-      img: "https://i.ytimg.com/vi/bRdVLezplVs/maxresdefault.jpg",
-      link: "https://youtu.be/bRdVLezplVs?si=leKdvFz6mBdCZuWp"
-    },
-    {
-      title: "Dumdaar Khiladi Movie in Hindi | Ram Pothineni | Anupama | Hindi Movie 2024 Full Movie | South Movie",
-      img: "https://i.ytimg.com/vi/UAOMIrYmDFQ/maxresdefault.jpg",
-      link: "https://youtu.be/UAOMIrYmDFQ?si=QB0FeBKYfuhpKQLg"
-    },
-    {
-      title: "Ramcharan's Jaat New 2025 Released Full Action Movie | Latest New South Hindi Dubbed Movie 2025",
-      img: "https://i.ytimg.com/vi/OaWkGdTvHIU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDOPVJk9S5z62ZE_X4mhNsBfHhoag",
-      link: "https://youtu.be/nqmYnTZvcw8?si=wcYDUYH7VweZMZDMd"
-    },
-    {
-      title: "Yevadu (Full HD) - Ram Charan & Allu Arjun Blockbuster Dubbed Movie | Kajal Aggarwal, Shruti",
-      img: "https://i.ytimg.com/vi/AgwszFUm_yQ/maxresdefault.jpg",
-      link: "https://youtu.be/xZw2trc5T20?si=4jCKQxiaxsGx1ALg"
-    },
-    {
-      title: "रोमियो - बिग बजट हिंदी डब फिल्म | साउथ एक्शन मूवी | राम चरण की ब्लॉकबस्टर साउथ हिंदी डब्ड मूवी",
-      img: "https://i.ytimg.com/vi/lHJrIxL0C0c/maxresdefault.jpg",
-      link: "https://youtu.be/lHJrIxL0C0c?si=ycq1nYg4_RrgzEsn"
-    },
-   
-    // 👉 Add more movie objects here up to Movie 50
-  ];
+  <script>
+    const movies = [
+      {
+        title: "JANA NAYAGAN (2025)| Vijay Thalapathy New South Hindi Dubbed Full Action Movie | Full Movie in Hindi",
+        img: "https://i.ytimg.com/vi/ryutkf-KfH8/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLCammEChq9I9x2fLEGtYITNM8E9qQ",
+        link: "https://youtu.be/iUlhzymqnzc?si=rlpui42kj6lgPzFz"
+      },
+      {
+        title: "Vijay Sensational Hindi Dubbed Action Movie HD | 2022 Latest South Indian Hindi Dubbed Movies",
+        img: "https://i.ytimg.com/vi/bRdVLezplVs/maxresdefault.jpg",
+        link: "https://youtu.be/bRdVLezplVs?si=leKdvFz6mBdCZuWp"
+      },
+      {
+        title: "Dumdaar Khiladi Movie in Hindi | Ram Pothineni | Anupama | Hindi Movie 2024 Full Movie | South Movie",
+        img: "https://i.ytimg.com/vi/UAOMIrYmDFQ/maxresdefault.jpg",
+        link: "https://youtu.be/UAOMIrYmDFQ?si=QB0FeBKYfuhpKQLg"
+      },
+      {
+        title: "Ramcharan's Jaat New 2025 Released Full Action Movie | Latest New South Hindi Dubbed Movie 2025",
+        img: "https://i.ytimg.com/vi/OaWkGdTvHIU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDOPVJk9S5z62ZE_X4mhNsBfHhoag",
+        link: "https://youtu.be/nqmYnTZvcw8?si=wcYDUYH7VweZMZDMd"
+      },
+      {
+        title: "Yevadu (Full HD) - Ram Charan & Allu Arjun Blockbuster Dubbed Movie | Kajal Aggarwal, Shruti",
+        img: "https://i.ytimg.com/vi/AgwszFUm_yQ/maxresdefault.jpg",
+        link: "https://youtu.be/xZw2trc5T20?si=4jCKQxiaxsGx1ALg"
+      },
+      {
+        title: "रोमियो - बिग बजट हिंदी डब फिल्म | साउथ एक्शन मूवी | राम चरण की ब्लॉकबस्टर साउथ हिंदी डब्ड मूवी",
+        img: "https://i.ytimg.com/vi/lHJrIxL0C0c/maxresdefault.jpg",
+        link: "https://youtu.be/lHJrIxL0C0c?si=ycq1nYg4_RrgzEsn"
+      }
+    ];
 
-  const movieContainer = document.getElementById('movieContainer');
-
-  movies.forEach(movie => {
-    const div = document.createElement('div');
-    div.className = 'movie';
-    div.innerHTML = `
-      <a href="${movie.link}" target="_blank">
-        <img src="${movie.img}" alt="${movie.title}">
-        <div class="movie-title">${movie.title}</div>
-      </a>
-    `;
-    movieContainer.appendChild(div);
-  });
-
-  function searchMovies() {
-    const query = document.getElementById('searchInput').value.toLowerCase();
-    const movies = document.querySelectorAll('.movie');
+    const movieContainer = document.getElementById('movieContainer');
 
     movies.forEach(movie => {
-      const title = movie.querySelector('.movie-title').textContent.toLowerCase();
-      movie.style.display = title.includes(query) ? 'block' : 'none';
+      const div = document.createElement('div');
+      div.className = 'movie';
+      div.innerHTML = `
+        <a href="${movie.link}" target="_blank" rel="noopener noreferrer">
+          <img src="${movie.img}" alt="${movie.title}" />
+          <div class="movie-title">${movie.title}</div>
+        </a>
+      `;
+      movieContainer.appendChild(div);
     });
-  }
-</script>
+
+    function searchMovies() {
+      const query = document.getElementById('searchInput').value.toLowerCase();
+      const movies = document.querySelectorAll('.movie');
+
+      movies.forEach(movie => {
+        const title = movie.querySelector('.movie-title').textContent.toLowerCase();
+        movie.style.display = title.includes(query) ? 'block' : 'none';
+      });
+    }
+  </script>
 
 </body>
 </html>
